# ResourceWorkbench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  pyproject.toml  server_launcher.py  启动-只读分析.bat  启动-可视化工作台.bat  启动-干净分发预览.bat  启动-开发工作台.bat  启动-正式工作台.bat  启动-正式演示测试目录.bat  启动-演示测试目录.bat  检查工具.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: AGENT_MODE_PLAN.md  BACKLOG.md  BUILD_WINDOWS_APP.md  CLAUDE_CONTINUE_PROMPT.md  DEVELOPMENT_LOG.md  HANDOFF_NEXT.md  PROJECT_STATUS_HANDOFF.md  QRoundedFrame_INTEGRATION.md  RESOURCE_WORKBENCH_REQUIREMENTS.md  SPEEDTREE_PREVIEW.md  USER_GUIDE.md  USER_PREP.md
frontend/: index.html
tests/: test_archive_behavior.py  test_card_metadata.py  test_cli_recommend.py  test_distribution_layout.py  test_fluent_skin.py  test_formatter.py  test_indexer_leaf_media.py  test_library_refresh.py  test_maintenance.py  test_move_learning.py  test_preview_cache_key.py  test_preview_integration.py  test_preview_selection.py  test_qt_card_wall.py  test_qt_library_tree.py  test_qt_runtime_maintenance.py  test_recommender_and_secret.py  test_renamer.py  test_review_workflow.py  test_runtime_maintenance_worker.py  test_safety_net.py  test_scan_no_drop.py  test_scan_split.py  test_settings_defaults.py  test_speedtree_preview.py  test_taxonomy_deep_targets.py  test_top_level_card_invariant.py  test_uploader_115.py  test_version_consistency.py  test_web_resource.py
tools/: build_windows_app.ps1  render_public_screenshot.py  windows_version_info.txt
(+49 files in other folders)
