[project]
name = "resource-workbench"
version = "0.1.0"
description = "A cautious resource-ingest workbench for scanning asset folders and proposing resource cards."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
resource-workbench = "resource_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

